# datahack

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  table_html.txt  test_queries.py
app/: config.py  db.py  feedback.py  main.py  models.py  sessions.py
app/ingest/: normalizer.py  schemas.py
app/rag/: chunker.py  confidence.py  embedder.py  generator.py  prompts.py  reformulator.py  retriever.py
data/: mappings.json
scripts/: analyze_feedback.py  hf_spaces_entrypoint.sh  ingest.py  init_db.sql  scraper.py
scripts/sample_data/: admisiones.json  costos.json  dirty_cases.json  pregrados.json  real_scraper_pregrados.json
tests/: conftest.py  test_chunker.py  test_citations.py  test_confidence.py  test_feedback.py  test_normalizer.py
